Fix Table of Contents (2) not showing top part of table
This adds a top margin of 10em to ensure the table of contents initial section is visible and not cutoff/inaccessible.

Close #1651

--- a/src/jupyter_contrib_nbextensions/nbextensions/toc2/main.css
+++ b/src/jupyter_contrib_nbextensions/nbextensions/toc2/main.css
@@ -83,6 +83,7 @@ padding-left: 20px;
   border-style: solid;
   border-width: thin;
   background-color: #fff;   /* default - alterable via nbextension-configurator */
+  top: 10em;
 }
 
 #toc-wrapper .toc {
